; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_mode4.c_PicoDrawSetOutputMode4.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_mode4.c_PicoDrawSetOutputMode4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FinalizeLine8bitM4 = common dso_local global i32* null, align 8
@FinalizeLineM4 = common dso_local global i32* null, align 8
@FinalizeLineRGB555M4 = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoDrawSetOutputMode4(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %8 [
    i32 129, label %4
    i32 128, label %6
  ]

4:                                                ; preds = %1
  %5 = load i32*, i32** @FinalizeLine8bitM4, align 8
  store i32* %5, i32** @FinalizeLineM4, align 8
  br label %9

6:                                                ; preds = %1
  %7 = load i32*, i32** @FinalizeLineRGB555M4, align 8
  store i32* %7, i32** @FinalizeLineM4, align 8
  br label %9

8:                                                ; preds = %1
  store i32* null, i32** @FinalizeLineM4, align 8
  br label %9

9:                                                ; preds = %8, %6, %4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
